syntax = "proto3";

package inventory;

service InventoryService {
  rpc CheckStock (StockRequest) returns (StockResponse);
}

message StockRequest {
  string item = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
}
