syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string item = 1;
  int32 quantity = 2;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
}
